# spotix

./: CLAUDE.md  Cargo.toml  LICENSE.md  README.md  justfile
.github/: FUNDING.yml
.github/workflows/: build.yml
.homebrew/: generate_formula.sh
.pkg/: copyright  spotix.desktop
.pkg/APPIMAGE/: pkg2appimage-ingredients.yml
.pkg/DEBIAN/: control
librespot-playback-patch/: .cargo_vcs_info.json  Cargo.toml
librespot-playback-patch/src/: player.rs
rspotify-model-patch/: .cargo_vcs_info.json  Cargo.toml
rspotify-model-patch/src/: album.rs  artist.rs  playlist.rs  show.rs  track.rs
spotix-cli/: Cargo.toml
spotix-cli/src/: main.rs
spotix-core/: Cargo.toml
spotix-core/src/: cache.rs  cdn.rs  oauth.rs  system_info.rs
spotix-core/src/audio/: source.rs
spotix-core/src/audio/output/: cpal.rs  cubeb.rs
spotix-core/src/connection/: mod.rs
spotix-core/src/player/: file.rs  item.rs  librespot.rs  mod.rs  queue.rs  storage.rs  worker.rs
spotix-core/src/session/: client_token.rs  login5.rs  mod.rs
spotix-gui/: Cargo.toml  build-icons.sh
spotix-gui/src/: cmd.rs  delegate.rs  main.rs  tray.rs
spotix-gui/src/controller/: ex_click.rs  ex_cursor.rs  input.rs  nav.rs  playback.rs  session.rs
spotix-gui/src/data/: album.rs  artist.rs  config.rs  mod.rs  playback.rs  playlist.rs  show.rs  track.rs
spotix-gui/src/ui/: album.rs  artist.rs  episode.rs  home.rs  library.rs  lyrics.rs  menu.rs  mod.rs  palette.rs  playable.rs  playback.rs  playlist.rs  preferences.rs  recommend.rs  search.rs  show.rs  theme.rs  track.rs  user.rs  utils.rs
spotix-gui/src/webapi/: cache.rs  client.rs  local.rs  rspotify_client.rs
spotix-gui/src/widget/: checkbox.rs  mod.rs  promise.rs  remote_image.rs
