[package]
name = "spotix-gui"
version = "0.1.0"
authors = ["skyline69"]
edition = "2024"
build = "build.rs"
description = "Fast and native Spotify client"
repository = "https://github.com/skyline69/spotix"

[features]
default = ["cpal"]
cpal = ["spotix-core/cpal"]
cubeb = ["spotix-core/cubeb"]

[dependencies]
spotix-core = { path = "../spotix-core" }

# Common
crossbeam-channel = { version = "0.5.15" }
directories = "6.0.0"
env_logger = { version = "0.11.8" }
itertools = "0.14.0"
log = { version = "0.4.29" }
lru = "0.16.2"
parking_lot = { version = "0.12.5" }
platform-dirs = { version = "0.3.0" }
rand = { version = "0.9.2" }
regex = { version = "1.12.2" }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = { version = "1.0.145" }
toml = "0.8.23"
threadpool = { version = "1.8.1" }
time = { version = "0.3.44", features = ["macros", "formatting"] }
time-humanize = { version = "0.1.3" }
ureq = { version = "3.1.4", features = ["json", "socks-proxy"] }
url = { version = "2.5.7" }
infer = "0.19.0"

# GUI
druid = { version = "0.8.3", features = ["im", "image", "jpeg", "png", "webp", "serde"] }
druid-shell = { version = "0.8.3", features = ["raw-win-handle"] }
open = { version = "5.3.3" }
raw-window-handle = "0.6.2" # Must stay compatible with Druid
souvlaki = { version = "0.8.3", default-features = false, features = ["use_zbus"] }
sanitize_html = "0.10.0"
rustfm-scrobble = "1.1.1"
[target.'cfg(windows)'.build-dependencies]
winres = { version = "0.1.12" }
image = { version = "0.25.9" }

[package.metadata.bundle]
name = "Spotix"
identifier = "com.skyline69.spotix"
icon = ["assets/logo.icns"]
version = "0.1.0"
resources = []
copyright = "Copyright (c) skyline69 2024. All rights reserved."
category = "Music"
short_description = "Fast and native Spotify client"
long_description = """
Small and efficient graphical music player for the Spotify network.
"""
